manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-protocol: "v2"
    nginx.ingress.kubernetes.io/proxy-protocol-tlv: "0x000F:16;$proxy_protocol_tlv_azure_pel_id"
    nginx.org/server-snippets: |
      map $proxy_protocol_tlvs$proxy_protocol_tlv_azure_pel_id $backend_name {
          default my-default-backend;
          "<Azure Private Link ID 1>" my-backend-1;
          "<Azure Private Link ID 2>" my-backend-2;
          # Add additional mapping rules as needed
      }
      proxy_pass $backend_name:80;
spec:
  rules:
    - host: example.com
      tcp:
        - port: 80
          backend:
            serviceName: my-service
            servicePort: 80
